syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.userservice";
option java_outer_classname = "UserServiceImpl";

package HowDoYouFeel;

    // Service to register new users and login
service UserService{
        //Register user with username and password > use the Regex to validate||password 8 digits 
    rpc RegisterNewUser(RegisterRequest) returns (RegisterResponse);
        // User login and validation
    rpc LoginUser(LoginRequest) returns (LoginResponse);
}

    // Request message for new user registration
message RegisterRequest{
    string user_name = 1; // User enters his name
    string password = 2; // Password fo the new user
    string date_of_birth = 3;  
    string therapist_name = 4; // The therapist name is optional
}

    //  Response message for confirmation/failure of the user registration
message RegisterResponse{
    bool success = 1; // Confirm the success in the user registration
    string message = 2; // Confirmation for succeed or error message
    int32 user_id = 3; // Random ID generated by server with 6 unique numbers
}

    // Request message for user login
message LoginRequest{
    int32 user_id = 1; // User login with ID
    string password = 2; // Password for login
}

    // Response message for confirmation/failure to login
message LoginResponse{
    int32 user_id = 1; // The user ID is shown if login successful 
    string message = 2; // Success or failure message
    bool success = 3;
}
